1.18-4.0.2:
- Fixed a problem with XNet networks not working below 0. Networks should be automatically upgraded to being below 0 compatible

1.18-4.0.1:
- Updates for McJtyLib and fixes

1.18-4.0.0:
- First release of XNet for 1.18

1.16-3.0.15:
- Updated to latest version of McJtyLib

1.16-3.0.14:
- Updated to latest version of McJtyLib

1.16-3.0.13:
- XNet cables and connectors can now be waterlogged and cables no longer break in water

1.16-3.0.12:
- Fix the item model for the yellow connector

1.16-3.0.11:
- Fixed the recipe for the connector upgrade

1.16-3.0.10:
- Fixed cables in creative tab
- Added back support for the XNet api
- Fixed a potential crash in facades
- Wireless router works again
- Disabling a connector will now immediatelly cause a visual update
- Fixed recipes and added recipe for connector upgrade kit
- The connector upgrade kit works again

1.16-3.0.9:
- Fixed a potential crash when placing a connector next to a hopper

1.16-3.0.8:
- Clipboard support in the controller is working again

1.16-3.0.7:
- Update to latest McJtyLib

1.16-3.0.6-beta:
- Fixed a problem on servers

1.16-3.0.5-beta:
- Accidentally removed the required tags

1.16-3.0.4-beta:
- Update to latest McJtyLib

3.0.3-beta:
- Fixed a problem on servers

3.0.2-beta:
- Safer client-side registrations (thread-safety)
- Various cleanups and fixes

3.0.1-beta:
- Fixed a potential exploit which could be used to attack a server

3.0.0-beta:
- First port to 1.16.2

2.1.8:
- Fixed a potential exploit which could be used to attack a server

2.1.7-beta:
- Update for latest McJtyLib

2.1.6-beta:
- Update for latest McJtyLib

2.1.5-beta:
- Kyle Edwards changed facade blocks to copy mimic block from other facade blocks
- Kyle Edwards fixed rendering of damaged cables

2.1.4-beta:
- Fixed the item model for XNet facades
- Kyle Edwards fixed various things related to the facades:
    - Fixed some rendering issues when breaking facades
    - Fixed the cable blocks being solid