@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with items not getting restored when breaking and placing blocks
+
 1.18-4.0.2:
 - Fixed a problem with XNet networks not working below 0. Networks should be automatically upgraded to being below 0 compatible
 
